Align title and menu items correctly

--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@
 
 .title {
   font-size: 112px;
-  line-height: 0.85;
+  line-height: 0.8;
 }
 
 @layer components {
